2005-09-15  Arunprakash  <arunp@novell.com>

	* camel/camel-exchange-folder.c (exchange_expunge) : Checks for
	offline mode and returns an error.
	** Fixes #272987.

2005-09-13  Roozbeh Pournader  <roozbeh@farsiweb.info>

	* configure.in: Added 'fa' (Persian) to ALL_LINGUAS.

2005-09-12  Shakti Sen <shprasad@novell.com>
 
	*addressbook/e-book-backend-exchange.c 
	(http_status_to_pas): Showing the appropriate 
	error message by returning the appropriate status.

	Fixes bug #241499.

2005-09-08  Arunprakash  <arunp@novell.com>

	* camel/camel-exchange-store.c (exchange_get_folder) : Reverted the
	changes made for #314573. Now remove the folder from the hash table
	if the folder construction fails, as the inserted is needed for
	processing the notifications (includes new mail) from the mail stub.
	** Fixes #315342.
	
2005-08-30  Arunprakash  <arunp@novell.com>

	* camel/camel-exchange-store.c (exchange_get_folder) : Insert into the
	hash table only when the folder construction succeeds.
	* mail/mail-stub-exchange.c (get_folder_online) : Changed the return
	type to indicate failure.
	(get_folder) : Returns on failure of online code.
	** Fixes #314573.
	
2005-08-28  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Updated the version number to 2.4.0

2005-08-28  Praveen Kumar  <kpraveen@novell.com>

	* camel/camel-exchange-provider.c : Reverting the change made in
	revision 1.25 as that fix is broken by some other change in 
	Camel. Adding the hide host mask again.
	
2005-08-27  Sarfraaz Ahmed <asarfraaz@novell.com>

	* AUTHORS : Updated the credits
	* calendar/e-cal-backend-exchange.c (init) : Dont init the mode here.

2005-08-26  Arunprakash  <arunp@novell.com>

	* addressbook/e-book-backend-exchange.c (e_book_backend_exchange_init):
	Set the default mode to local.
	* addressbook/e-book-backend-gal.c (set_mode) : Removed exchange
	account set offline and connect calls, as they should be called
	by appropriate listeners.